# ChangeLog for sci-libs/scipy
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.111 2013/12/26 20:52:20 jlec Exp $

*scipy-0.13.2-r1 (26 Dec 2013)

  26 Dec 2013; Justin Lecher <jlec@gentoo.org> +scipy-0.13.2-r1.ebuild:
  Fix for linking with mkl, #493318

*scipy-0.13.2 (22 Dec 2013)

  22 Dec 2013; Sébastien Fabbro <bicatali@gentoo.org> +scipy-0.13.2.ebuild:
  Version bump

  03 Dec 2013; Justin Lecher <jlec@gentoo.org> scipy-0.13.1-r2.ebuild:
  Drop unnecessary dep

*scipy-0.13.1-r2 (01 Dec 2013)

  01 Dec 2013; Justin Lecher <jlec@gentoo.org> -scipy-0.13.1-r1.ebuild,
  +scipy-0.13.1-r2.ebuild:
  Make realy sure cython is run always, #492760

*scipy-0.13.1-r1 (29 Nov 2013)

  29 Nov 2013; Justin Lecher <jlec@gentoo.org> -scipy-0.13.1.ebuild,
  +scipy-0.13.1-r1.ebuild:
  Force rebuild of .c files to fix memory leak, #492760

  29 Nov 2013; Justin Lecher <jlec@gentoo.org> scipy-0.13.1.ebuild:
  Fix doc installation, #492808

*scipy-0.13.1 (28 Nov 2013)

  28 Nov 2013; Justin Lecher <jlec@gentoo.org> +scipy-0.13.1.ebuild:
  Version Bump

  02 Nov 2013; Justin Lecher <jlec@gentoo.org> -scipy-0.9.0-r1.ebuild,
  -scipy-0.12.0.ebuild:
  Drop vulnerable versions, #488048

  02 Nov 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for x86, wrt bug #488048

*scipy-0.13.0 (28 Oct 2013)

  28 Oct 2013; Sébastien Fabbro <bicatali@gentoo.org> +scipy-0.13.0.ebuild:
  Version bump

  23 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for ppc64, wrt bug #488048

  22 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for ppc, wrt bug #488048

  19 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for amd64, wrt bug #488048

*scipy-0.12.1 (13 Oct 2013)

  13 Oct 2013; Justin Lecher <jlec@gentoo.org> +scipy-0.12.1.ebuild,
  metadata.xml:
  Version Bump
