@@ -15,27 +15,31 @@ DIST scipy-0.13.0-ref.pdf 14748179 SHA256 52caa5fd7e74f2e5a78f26296d2150808eee9e
 DIST scipy-0.13.0.tar.gz 10093476 SHA256 e7fe93ffc4b55d8357238406b1b9e47a4f932474238e2bfdb552423bcd45dc5e SHA512 5bd8f032560dba4796942c8cbbd341c449aae10c3de6023c62bf754bb48d84ba821dbbc24bfe371781e8a06958c104baf670bf167597ec5d4fd5fd2eeadc54b5 WHIRLPOOL 39df9a0c03962f0b5c16efe38d8900c523e45426e228951a5d84fbf7b742cd37c8775f628e6973da572b3b7e088aecba1f7277dbf1fd6e3b72f78a8ad6599a06
 DIST scipy-0.13.1.tar.gz 10092739 SHA256 409f429a85592c8a99afa2fc047b80efdbd7ab0c9aa1f1effdd4692958aef228 SHA512 a5522a368a51f7a746852e61ac60f2b46f4b18a323ebaac9e554788d31fbd270757aab1edea3899970c6d753540120dd52a7248d46142c14da1938fc48a40a12 WHIRLPOOL f02265cbf8918f1b2da708dc8f21b2ac67fbc14e816cae69bc97c31b7736c32a8bc5cd710832f0ae0d459ff0732d4ab40ab1ef6604d12e6cc998cbee0608d005
 DIST scipy-0.13.2.tar.gz 10144409 SHA256 485f194c7fe46da92e63bff524346ccaed4040c27df536bbde7b1edc9a07b449 SHA512 ab9acb0a8b388eaf8528be4fd0bcbf954e9a6337a874d666bf1590d396018c5b818c08d0227b4655f45aa408d4e0f1c500588016a90c2dba0f03e2aa3f6a5c60 WHIRLPOOL 99258cc7e1438535849b85727afa5730be1a1b9f179515c1e1c297e825a56fae2ac385775a40156431c0031e08aa198387667fa92cb2f36fc5c49dadd9040013
+DIST scipy-0.13.3.tar.gz 10712509 SHA256 a9e33c7ee060c35cd5c6ee3ac9e5e9bbb99219d7ea8c89537c2e80e581670266 SHA512 8cf32c8ea4d8fe903bafae23dedb4d4ba80b580f5bddf351ea1d2bbbdcbd753389d7992f2db39d7a6b3f0629674daa697c2660d25396ef506f1e3b81c817170a WHIRLPOOL 5065bf05263d8633063705a2d55236e57e4d0861c105b50e7e5d8a1341e4840df37bbad16fc2d2c9f7d95880f875803b96d129f4e766b8bc5a13e926bc4e216d
 EBUILD scipy-0.12.1.ebuild 3794 SHA256 aa1a59f045d86e2cb7016682ea841913bb8429b87a3095a7a00ce3f75b2c48d8 SHA512 856b8b23e6a8ab3efb6526e7cc94b8eb742d04cfa1e460ee9364265743d655cfed4cbb296d41c07ccae3dc4d3945f41a53e0307b87a740b4b7f3fbae6d161f1f WHIRLPOOL d837a98eabb2e5feb143d94790f79c622ab8eba6f4d868bfa2bb0f010af29460389d7d46d6d2be5d11b679624540f87fb8f93a9f69982824397703d0dec4e9e0
 EBUILD scipy-0.13.0.ebuild 3619 SHA256 f934647eceef2c326878d31bdf9289ca86726ed1ced5f29568df1935ba6a37f1 SHA512 370aa07dba0e61fe23dc57a33cb460058cfa1708a5d2e21dc7bb41cdfa7bb987e71281ab16dca0e056e1192cf6e69653e689eb5aa87231bbe105544ff69c2f93 WHIRLPOOL 300028a9c33c9010650dfd12437ec9b5e0ccb44b5404b20b2ec897ea4d15dceabf4d2ff89678c90ba567847581d4c03ea12524193ccbff63bc1c3a83421a77ce
 EBUILD scipy-0.13.1-r2.ebuild 3788 SHA256 83773fbd8dc2906d2e809378e45f939d88211785f12014db26cc34e8adc7aa24 SHA512 1a48a5ee02b1c53860cd9afd53d78e2f115ec92b431053f8ebb3de74c13e8aa1a52fbff33d57043390b70aa64171f0f5035f23e0a1a333cb0d15bc2f11284c0c WHIRLPOOL 18333f4e53ac4a88355b4bb4a02cd1a3eb22d3d312ace1aa26e2f07eeefd5cfa03113ef1cd01a2ed85798b5e28a017a4c54ac80bed12652ccf33b1e4c005a05d
 EBUILD scipy-0.13.2-r1.ebuild 3856 SHA256 fe6cb1e6fd7a8dafe8bbc0d8158ef5d7ba4ee4d8c7d1a5d095a3f5e010465f11 SHA512 fadf57e152b9ba2b8ad0b08274d2c0e9ddd9044aaa8e64e1ed1d3a76ce092d776c55876d72b75a4d2c0fb1e34e6f931cf9f074a44fdbab13d1cf3ac21fcbdffe WHIRLPOOL 07c78c273d806476e9bc0d56adaae39b13bbc495d622a8d88f81580650cc73754f7bf2170d864c8504d012cc90e2cd1a485f13f84c999b7d7b82345c73cca459
 EBUILD scipy-0.13.2.ebuild 3821 SHA256 7fbd1d0be83c47969d44a79eab7b5d5045d4fc02633e038a7ce870a782c3aca8 SHA512 4a9a5a14d1386dfdf46dc1701508b0be052ab9b6cf05e7972689d6842808491eb952cf2269fcf926aec8664ed40953fe11f62b3bfb5f2bc9dc940d60681a642d WHIRLPOOL 45018cacda91ce0f7ea2692994ea6e608fa7996a6f92e6eb8f73c0bd4f29d42fe0e3c4efc1d60cd3fddc082f961695a4706bfdcf6caac3a693b4657c76cf4346
-MISC ChangeLog 20161 SHA256 7a2772fc74b450cab8756c67bbae10b8023e476361438d42b248e4e594546b0c SHA512 51cfa54b78279a12721e393579dba593a783c794f900497cdd9dd43602a9d011ded3f994e040131cb590ea1d6b5baedfc450c6681b124b893f93651971ac64f0 WHIRLPOOL 580097342b13b9383d983456c64c6f61cc22adddee586b700073cf49b0b61fbfbddd8cab1dc62c1f77a19ca37bec331bc8e5d7e7e9532bc9d482e8f3849a1dd3
+EBUILD scipy-0.13.3.ebuild 3853 SHA256 c769fe9b298ac92fd88b75470efaccaf9fcc7a22745de08bdf59d21c6b4586a3 SHA512 015491bc9286a939c1308848c077c83dddf0e174b5dbb770000635d4dcaa282c7c564cc67f70e913c2034209d5246b6fb4735c47309229e998fdb634d403bb48 WHIRLPOOL ee56ba4bd7e1e9de168daab075056e1ebae0736e0000414c4800edded9b1c807ff8d19c3b06b782d161704f6679b2558da8c7c99a6b20b6afe724a7927127195
+MISC ChangeLog 20275 SHA256 4e82f8b49b14d460dab974a04eb0b1a222bd1d906ee901178ec5b35bcd8fb9db SHA512 4b5ae7ab5b7cd0793465809955264935533dad83116ce3d9a7b046988fa19c628b07aa536f3321d3a3f153ccda594883282f2461afba3787a9e53fa0268e3123 WHIRLPOOL e3e065a24cea2dacddcc0d230bdb6a71465acf34b167f8edf83ff5591a5856cf17607d9706415ed417efb0d2caf4bdb7207a486d260f6b141426932f56df6049
 MISC metadata.xml 778 SHA256 c585563656be41d539826dbd6ac5f633a0704b73a39b3603b50ce6092d767e73 SHA512 da239d303a88f7bc4356a27965aed91befd379ee142c529ab5177276eb86ac7976b527a2b1397584754f1cec1c6743c98b9af4a540e6cc503607ac3cf529de06 WHIRLPOOL e04375da88108229b3386ae79ba452705a4d4fcdbff9f38c491a4436846c9037d8c68bd8d5524d5435e351a557bd604211477a28da5661c9cce804fe27a34b2a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSvJcFAAoJELnU8jG9FVirB+AP/jBF7fbS/ebylN8qNl/gg2vW
-jMTBEwgOO6Ixxa5UC2h02f811rdgNGnYfW6+aYl+JstAZgqs0mImF+j/wsG+LoZk
-NjJ2aXBis4WUop/OLSy00Aj/FhexwF+1ug4Ta7mVFRphwe2ERxK6JPPOLWuVzI1C
-AtWoQOk/9PGYGbQmbVqO8T+x2G10HF7CcMqWAg/OeARrsllH9ryIehyz+9M6CfTE
-2d7jcQWnrr67uivLVXSTiNnVGBpnvkJw2CZsgvb65OfZTRlFwL0fMIzaaCtMGq+z
-W95AC99Tp+YxnzGAcgEGb2+7Y3pM6eeeZZtXiWY6MKgCFS+lqVF1JQgSaR3xhs8v
-7Z9H63zCSd/yXkosGzkfpBZi+kZnkIEavpskWbulv8GmEiZYFQjhx4SB7d+Om13r
-KLHRPWlTA4h7sq4a3QxN5Xe02SKplil6X7BxPyzAi+JzmFtwkPGeQEYEH3coEEc8
-f5lG9CJz0MjUNR8+OcXK4/Y7fq0SVRNBsSA8y0kao/LlSJSPbuwqYA1qNz1NQqYo
-S4M4DisUXZ/9Isim2HxFIfCCKVhkA2av/euq4PY2+wr4/kUGYw0cG5SQmogGe82G
-el0/Hw312vqGo/lMRV5ESuO303GdcpxHNGiNYAJEWz8Yj88v2hhJT4SwmM7nE788
-N3gok2L9tAiY9VXHS386
-=GX9b
+iQJ8BAEBCgBmBQJTB171XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirpxYP+wUlzbwvM12cono1+0wMadlm
+jlIqXd5P42LvamHUgpOe8sJ2tR5FU1JrgnG2XVvG9nAiEA6AEw0CNmkNwl3pVvCb
+yH5FhXKNnqPL/oKqQfyTn7Fl1G2qUnEpmNQ3lbkppe+N1G9QUJey0dz2uRM7+ZaC
+JUUoDTrtrtu4CrOQtKeUDtZ0d97/gpHT6PqtULC4jOWYSxAVJ6zMbrLpXg+TYrbZ
+AbdRCbM17HTbHCVgNdh5vRDxXg3hTuWTdhYNUZ9srV1xajlMwZqY95UHC9uLDS90
+t+Vjci42oCbI8BDQpR+yAXFIWjjcfeFexPbsv9Ls74sXrnJjEAQy1hmwfnPRj+wG
+mxsLfDBigijgKW/Rg+Wcp8KCGeycw9SUPlXddRX+VWZjjnA3t2HCbQzTa6NavPki
+vVZmE5a4KWvVGmDY3Fes+Hx4QYcJ+YTz3HF4TOjCeXCbje0+vwEGJKY9wECMAn+j
+7gpvGrqxeECILjbx37pvCV2DYuDaLRv1rKT4OOh1Ls/G6jZR2uCKIS3/AbQstuB3
+JbHpmNE7xKSQ2gJByPoC8kSbQSmE1XCZgTjtSc0Qz9UPpmnXdHp3lQM0NgcLu7Uk
+SW2b7RYQNKTXHQ93Cd8Hm0oBj77M+0V94Pv9pXnZ4Ks5/Xmecg8kJ/WTcnXrOdp/
+Pb1nnBGxsAyiqLijJxF4
+=eBiz
 -----END PGP SIGNATURE-----
